syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = ".;grpc";

message GrudRequest {
  int64 id = 1;
  int64 userId = 2;
  string title = 3;
  string body = 4;
}
message Post {
  int64 id = 1;
  int64 userId = 2;
  string title = 3;
  string body = 4;
}
message Status {
  string name = 1;
  string message = 2;
}
message GetResponse {
  Status status = 1;
  Post data = 2;
}
message GetAllResponse {
  Status status = 1;
  repeated Post data = 2;
}

service GrudService {
  rpc GetAll(google.protobuf.Empty) returns (GetAllResponse);
  rpc Get(GrudRequest) returns (GetResponse);
  rpc Update(GrudRequest) returns (Status);
  rpc Delete(GrudRequest) returns (Status);
}